Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
+title {
+  margin: 75px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    color: aqua;
+
+}
+.qod {
+  margin-top: 20px;
+
+}
 body {
-  margin: 0;
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 35px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.item {
+  display: inline-block;
+  text-align: left;
+  vertical-align: top;
+  margin-top: 35px;
+  width: 33%;
+}
+.img {
+  border-radius: 15px;
+  overflow: scroll;
+  perspective: 1px; 
+}
+.caption {
+  display: block;
+  font-weight: bold;
+  margin-top: 10px;
+  padding-left: 115px;
+}
+
